--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- SEO Meta Tags -->
   <title>All Yono Games - Download Now and Get Bonus Upto ₹500</title>
   <meta name="description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
-  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money" />
+  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money,jaiho 777,Yono 777,Mkm Bet,Neta Vip,Spin 777,Yono Arcade,Yono Vip,Best earning apps, Online earning apps,paisa kaise kamaye,Free Earn Games, Earning games" />
   <meta name="author" content="YONO GAMES" />
 
   <!-- Open Graph Meta Tags for Social Sharing -->
