--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
         <a class="download" href="https://yonoofficial.com?code=F559HGJK4UB&t=1745499305">Download</a>
       </div>
 
-
+      <div class="app">
+        <img src="yono_slots.jpg" alt="Yono Slots">
+        <div class="app-info"><strong>YONO SLOTS</strong>10M+ | Bonus ₹30</div>
+        <a class="download" href="https://www.yonoslotsc.com?code=PJBN43T298M&t=1746011590">Download</a>
+      </div>
     </div>
 
     <div class="gallery">
