--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
       .app-info { font-size: 0.8em; }
       .download { font-size: 0.85em; padding: 8px 12px; }
     }
+    
+    a, a:focus, a:active, a:visited,
+button, button:focus, button:active {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+  -webkit-tap-highlight-color: transparent !important;
+}
+    
   </style>
 </head>
 
