--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
   <!-- Google Site Verification (if needed) -->
   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
+  
+  <link rel="icon" href="yono_favicon_48x48.png" type="image/png" sizes="48x48">
+  
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
