--- a/index.html
+++ b/index.html
@@ -42,12 +42,26 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "All Yono Games",
-  "url": "https://www.yonogamez.com/",
-  "description": "Download All Yono Games and get bonus up to ₹500 instantly!",
-  "image": "https://www.yonogamez.com/og.jpg"
+  "@type": "Article",
+  "headline": "All Yono Games - Download Now and Get Bonus Upto ₹500",
+  "description": "Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!",
+  "image": "https://www.yonogamez.com/og.jpg",
+  "author": {
+    "@type": "Organization",
+    "name": "YONO GAMES"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "YONO GAMES",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.yonogamez.com/logo.png"
+    }
+  },
+  "mainEntityOfPage": "https://www.yonogamez.com/",
+  "datePublished": "2024-05-01"
 }
+</script>
 </script>
   <!-- CSS Styling -->
   <style>
