--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     gtag('js', new Date());
     gtag('config', 'G-LDKBV43X40');
   </script>
-
+  
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Yono Gamez" />
+<meta property="og:description" content="Play games and earn exciting rewards on Yono Gamez!" />
+<meta property="og:image" content="https://yonogamez.com/og.jpg" />
+<meta property="og:url" content="https://yonogamez.com/" />
+<meta property="og:type" content="website" />
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>All Yono Games - Download Now and Get Bonus Upto ₹500</title>
