--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
   
+    <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>All Yono Games - Download Now and Get Bonus Upto ₹500</title>
