--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     gtag('config', 'G-LDKBV43X40');
   </script>
   
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TLQP7JSF');</script>
+<!-- End Google Tag Manager -->
+  
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="Yono Gamez" />
 <meta property="og:description" content="Play games and earn exciting rewards on Yono Gamez!" />
@@ -312,6 +320,12 @@
 </head>
 
 <body>
+  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TLQP7JSF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
   <div class="header">
     <div style="display: flex; flex-direction: column; align-items: flex-start;">
       <span class="line1">ALL</span>
