--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang="en">
 <head>
   
-  
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TLQP7JSF');</script>
-<!-- End Google Tag Manager -->
-  
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="Yono Gamez" />
 <meta property="og:description" content="Play games and earn exciting rewards on Yono Gamez!" />
@@ -18,6 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
   
+   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
