--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LDKBV43X40"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LDKBV43X40');
+</script>
+
   <meta name="google-site-verification" content="6PxxS1g-Mqz4I2VExJEnVG_Pv2Dnc09oO2VpCVeMiO4" />
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="Yono Gamez" />
