--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Spin Crush - Download Now and Get Bonus Upto ₹500</title>
-  <meta name="description" content="Download All Yono Games now and grab your bonus upto ₹500 instantly. Play your favorite games and earn real rewards easily!" />
+  <meta name="description" content="Play Spin Crush on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!" />
   <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
   <meta name="author" content="YONO GAMES" />
   
