--- a/index.html
+++ b/index.html
@@ -313,7 +313,12 @@
 </head>
 
 <body>
-  
+
+  <ul>
+        <li><a href="spin_crush.html">Spin Crush</a></li>
+        <li><a href="teen_patti_master.html">Teen Patti Master</a></li>
+        <li><a href="yono_rummy.html">Yono Rummy</a></li>
+  </ul>
 
   
   <div class="header">
