--- a/teen_patti_master.html
+++ b/teen_patti_master.html
@@ -24,8 +24,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Teen Patti Master - Download Now and Get Bonus Upto ₹500</title>
-  <meta name="description" content="Play Spin Crush on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!" />
-  <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
+  <meta name="description" content="Play Teen Patti Master on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!" />
+  <meta name="keywords" content="teen patti master,teen patti master download,teen patti master game,YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
   <meta name="author" content="YONO GAMES" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
