--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="keywords" content="YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
   <meta name="author" content="YONO GAMES" />
 
-<link rel="canonical" href="https://yonogamez.com/spin-crush.html" />
+<link rel="canonical" href="https://yonogamez.com/spin_crush.html" />
  <link rel="canonical" href="https://yonogamez.com/teen_patti_master.html" />
   <link rel="canonical" href="https://yonogamez.com/yono_rummy.html" />
   
