--- a/spin_crush.html
+++ b/spin_crush.html
@@ -20,7 +20,8 @@
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
   
-   
+   <link rel="canonical" href="https://yonogamez.com/spin_crush.html" />
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Spin Crush - Download Now and Get Bonus Upto ₹500</title>
