--- a/yono_arcade.html
+++ b/yono_arcade.html
@@ -20,15 +20,16 @@
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
   
-   <link rel="canonical" href="https://yonogamez.com/yono_arcade.html" />
    
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yono Arcade - Download Now and Get Bonus Upto ₹500</title>
-  <meta name="description" content="Play Yono Arcade on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!" />
-  <meta name="keywords" content="yono arcade,yono arcade Download,yono arcade game,YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
+  <meta name="description" content="Play Yono Arcade on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!"/>
+  <meta name="keywords" content="yono arcade,yono arcade game,yono arcade download,YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
   <meta name="author" content="YONO GAMES" />
+
   
+   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -314,7 +315,6 @@
 </head>
 
 <body>
-  
 
   
   <div class="header">
@@ -337,15 +337,15 @@
 
   <div id="home-section">
     <div class="app-container">
-      
-       <div class="app" onclick="showPopup({ img: 'yono_arcade.jpg', name: 'YONO ARCADE', rating: 4.5, bonus: 30, downloads: '10M+', link: 'https://yonoofficial.com?code=F559HGJK4UB&t=1745499305' })">
+
+      <div class="app" onclick="showPopup({ img: 'yono_arcade.jpg', name: 'YONO ARCADE', rating: 4.5, bonus: 30, downloads: '10M+', link: 'https://yonoofficial.com?code=F559HGJK4UB&t=1745499305' })">
         <img src="yono_arcade.jpg" alt="YONO ARCADE">
         <div class="app-info">
           <strong>YONO ARCADE</strong>
           10M+ | Bonus ₹30
           <div><span class="fake-download-btn">Download</span></div>
       </div>
-       </div>
+      </div>
       
       <div class="app" onclick="showPopup({ img: 'spin_crush.jpg', name: 'SPIN CRUSH', rating: 5, bonus: 40, downloads: '10M+', link: 'https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1745498414' })">
         <img src="spin_crush.jpg" alt="Spin Crush">
@@ -356,14 +356,14 @@
         </div>
       </div>
 
-     <div class="app" onclick="showPopup({ img: 'teen_patti_master.jpg', name: 'TEEN PATTI MASTER', rating: 4.3, bonus: 40, downloads: '10M+', link: 'https://www.earntp.com/m/l34ii' })">
+      <div class="app" onclick="showPopup({ img: 'teen_patti_master.jpg', name: 'TEEN PATTI MASTER', rating: 4.3, bonus: 40, downloads: '10M+', link: 'https://www.earntp.com/m/l34ii' })">
         <img src="teen_patti_master.jpg" alt="Teen Patti Master">
         <div class="app-info">
           <strong>TEEN PATTI MASTER</strong>
           10M+ | Bonus ₹40
           <div><span class="fake-download-btn">Download</span></div>
         </div>
-     </div>
+      </div>
 
       <div class="app" onclick="showPopup({ img: 'yono_rummy.jpg', name: 'YONO RUMMY', rating: 4.4, bonus: 30, downloads: '10M+', link: 'https://yonorummyg.com?code=TQJPFHAM2TH&t=1745498673' })">
         <img src="yono_rummy.jpg" alt="YONO RUMMY">
