--- a/yono_rummy.html
+++ b/yono_rummy.html
@@ -394,6 +394,15 @@
           <div><span class="fake-download-btn">Download</span></div>
       </div>
       </div>
+
+       <div class="app" onclick="showPopup({ img: 'yono_slots.jpg', name: 'YONO SLOTS', rating: 4, bonus: 20, downloads: '10M+', link: 'https://www.yonoslotsw.com?code=PJBN43T298M&t=1747210343' })">
+        <img src="yono_slots.jpg" alt="YONO SLOTS">
+        <div class="app-info">
+          <strong>YONO SLOTS</strong>
+          10M+ | Bonus ₹30
+          <div><span class="fake-download-btn">Download</span></div>
+      </div>
+      </div>
       
       <div class="gallery">
       <img src="gallery1.jpg" alt="Gallery 1">
