--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <meta property="og:image" content="https://yonogamez.com/og.jpg" />
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
-  
+
+    <link rel="canonical" href="https://yonogamez.com.html" />
    
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
