--- a/yono_slots.html
+++ b/yono_slots.html
@@ -25,6 +25,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yono Slots - Download Now and Get Bonus Upto ₹500</title>
+  <link rel="icon" href="/favicon.png" type="image/png">
   <meta name="description" content="Play Yono Slots on YonoGamez and get a signup bonus. Download now and start winning real cash. Play your favorite games and earn real rewards easily!"/>
   <meta name="keywords" content="yono slots,yono slots download, yono slots game,YONO Games, gaming apps, Spin Crush, YONO Rummy, Jaiho Spin, Bingo, YONO Arcade, bonuses, download games, mobile gaming, earn money, jaiho 777, Yono 777, Mkm Bet, Neta Vip, Spin 777, Yono Arcade, Yono Vip, Best earning apps, Online earning apps, paisa kaise kamaye, Free Earn Games, Earning games,Yono Gamez, play games, earn rewards, online games, game platform, free games, gaming website, rewards for playing, win prizes, casual games" />
   <meta name="author" content="YONO GAMES" />
