--- a/yono_arcade.html
+++ b/yono_arcade.html
@@ -20,7 +20,7 @@
 <meta property="og:url" content="https://yonogamez.com/" />
 <meta property="og:type" content="website" />
   
-   
+   <link rel="canonical" href="https://yonogamez.com/yono_arcade.html" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yono Arcade - Download Now and Get Bonus Upto ₹500</title>
