--- a/ind_bingo.html
+++ b/ind_bingo.html
@@ -368,7 +368,7 @@
         </div>
       </div>
       
-      <div class="app" onclick="showPopup({ img: 'jaiho_slots.jpg', name: 'JAIHO RUMMY', rating: 4, bonus:40, downloads: '8M+', link: 'https://jahoslotsagents25.com?code=EGPLHDA69QV&t=1748455635' })">
+      <div class="app" onclick="showPopup({ img: 'jaiho_slots.jpg', name: 'JAIHO SLOTS', rating: 4, bonus:40, downloads: '8M+', link: 'https://jahoslotsagents25.com?code=EGPLHDA69QV&t=1748455635' })">
         <img src="jaiho_slots.jpg" alt="JAIHO SLOTS">
         <div class="app-info">
           <strong>JAIHO SLOTS</strong>
