--- a/teen_patti_master.html
+++ b/teen_patti_master.html
@@ -360,7 +360,14 @@
         </div>
       </div>
 
-     
+     <div class="app" onclick="showPopup({ img: 'jaiho_slots.jpg', name: 'JAIHO SLOTS', rating: 4, bonus:40, downloads: '8M+', link: 'https://jahoslotsagents25.com?code=EGPLHDA69QV&t=1748455635' })">
+        <img src="jaiho_slots.jpg" alt="JAIHO SLOTS">
+        <div class="app-info">
+          <strong>JAIHO SLOTS</strong>
+          8M+ | Bonus ₹40
+          <div><span class="fake-download-btn">Download</span></div>
+      </div>
+     </div>
 
       <div class="app" onclick="showPopup({ img: 'yono_rummy.jpg', name: 'YONO RUMMY', rating: 4.4, bonus: 30, downloads: '10M+', link: 'https://yonorummyg.com?code=TQJPFHAM2TH&t=1745498673' })">
         <img src="yono_rummy.jpg" alt="YONO RUMMY">
