--- a/yono_rummy.html
+++ b/yono_rummy.html
@@ -348,6 +348,15 @@
           <div><span class="fake-download-btn">Download</span></div>
       </div>
     </div>
+      
+      <div class="app" onclick="showPopup({ img: 'teen_patti_master.jpg', name: 'TEEN PATTI MASTER', rating: 4.3, bonus: 40, downloads: '10M+', link: 'https://www.earntp.com/m/l34ii' })">
+        <img src="teen_patti_master.jpg" alt="Teen Patti Master">
+        <div class="app-info">
+          <strong>TEEN PATTI MASTER</strong>
+          10M+ | Bonus ₹40
+          <div><span class="fake-download-btn">Download</span></div>
+        </div>
+      </div>
     
       <div class="app" onclick="showPopup({ img: 'spin_crush.jpg', name: 'SPIN CRUSH', rating: 5, bonus: 40, downloads: '10M+', link: 'https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1745498414' })">
         <img src="spin_crush.jpg" alt="Spin Crush">
@@ -358,13 +367,13 @@
         </div>
       </div>
 
-      <div class="app" onclick="showPopup({ img: 'teen_patti_master.jpg', name: 'TEEN PATTI MASTER', rating: 4.3, bonus: 40, downloads: '10M+', link: 'https://www.earntp.com/m/l34ii' })">
-        <img src="teen_patti_master.jpg" alt="Teen Patti Master">
+      <div class="app" onclick="showPopup({ img: 'jaiho_slots.jpg', name: 'JAIHO SLOTS', rating: 4, bonus:40, downloads: '8M+', link: 'https://jahoslotsagents25.com?code=EGPLHDA69QV&t=1748455635' })">
+        <img src="jaiho_slots.jpg" alt="JAIHO SLOTS">
         <div class="app-info">
-          <strong>TEEN PATTI MASTER</strong>
-          10M+ | Bonus ₹40
+          <strong>JAIHO SLOTS</strong>
+          8M+ | Bonus ₹40
           <div><span class="fake-download-btn">Download</span></div>
-        </div>
+      </div>
       </div>
 
 
