--- a/index.html
+++ b/index.html
@@ -430,7 +430,90 @@
   </div>
 
   <div id="about-section" style="display: none; padding: 20px; background-color: #003300; color: #fffbd1;">
-    <h2 style="color: #ffe600;">About Us</h2>
+    <h1 style="text-align: center; font-size: 36px; margin-bottom: 20px;">About Us</h1>
+    <p>
+      Welcome to <strong>YonoGamez</strong> – your ultimate destination for fun, competition, and pure gaming excitement. We’re not just a website; we’re a community of dreamers, doers, and gamers who believe that playing isn’t just about winning—it's about having fun, challenging yourself, and connecting with others. Whether you're a casual gamer looking to kill time or a serious competitor climbing the leaderboard, you’ll find your home here at YonoGamez.
+    </p>
+
+    <h2>Who We Are</h2>
+    <p>
+      YonoGamez was created with one goal in mind: to bring people together through games. Our team is made up of passionate game lovers, developers, designers, and creators who grew up playing the classics and now work every day to create something new and exciting. We are based in India, but our reach and our gamers come from all around the globe. YonoGamez is for everyone—from school kids and college students to working professionals looking to unwind after a long day.
+    </p>
+
+    <h2>What We Do</h2>
+    <p>
+      We offer a dynamic collection of games that are quick, addictive, and rewarding. Whether it's trivia, skill-based games, puzzle challenges, or fast-tap reflex tests, we design every game with one thing in mind: entertainment. But we’re not just about fun—we also give you the chance to earn rewards, rise through the ranks, and feel the thrill of friendly competition.
+    </p>
+    <p>
+      Our games are built to be mobile-first, lightning-fast, and easy to play. No downloads, no lag—just tap and play. And the best part? You can play anywhere, anytime.
+    </p>
+
+    <h2>Why We Exist</h2>
+    <p>
+      The internet is filled with complicated apps, fake promises, and boring gameplay. We wanted to change that. YonoGamez was born out of the need for something simple, clean, and powerful. A place where you don’t have to worry about downloads or in-app purchases. Just play, enjoy, and compete. We believe gaming should be accessible to everyone—regardless of your phone, internet speed, or wallet.
+    </p>
+
+    <h2>Our Vision</h2>
+    <p>
+      To become one of the biggest gaming platforms that brings joy to millions, inspires friendly competition, and creates an ecosystem where casual gamers can shine. We see a future where people all over the world connect through our games, compete with friends, and build unforgettable gaming memories.
+    </p>
+
+    <h2>Our Mission</h2>
+    <ul>
+      <li>To create fast, fun, and fair games for everyone</li>
+      <li>To build a loyal community of gamers who support each other</li>
+      <li>To reward skills, effort, and consistency—not just luck</li>
+      <li>To stay innovative and always keep improving the player experience</li>
+    </ul>
+
+    <h2>What Makes YonoGamez Different?</h2>
+    <p>
+      We’re not your average gaming site. We focus on:
+    </p>
+    <ul>
+      <li><strong>Simplicity:</strong> Our platform is easy to use, navigate, and enjoy.</li>
+      <li><strong>Speed:</strong> Games load fast, run smooth, and keep you hooked.</li>
+      <li><strong>Community:</strong> We foster a positive space where players support each other.</li>
+      <li><strong>Fairness:</strong> No pay-to-win mechanics—only real skill earns you rewards.</li>
+      <li><strong>Innovation:</strong> New games and features are added regularly to keep things fresh.</li>
+    </ul>
+
+    <h2>Meet Our Community</h2>
+    <p>
+      At the heart of YonoGamez is our amazing community. Our players are young, energetic, and ready to compete. Whether you're challenging your friends, participating in tournaments, or just hanging out on our leaderboard, you're part of something bigger here. Our community is growing every day, and we’re proud to see new gamers join us from every corner of the country—and beyond!
+    </p>
+
+    <h2>Security & Fair Play</h2>
+    <p>
+      We take fair play seriously. All our games are built with strong anti-cheat systems to ensure every match is honest and transparent. We do not tolerate hacking or exploitation. Our mission is to make YonoGamez a place where players can trust the system and feel safe competing.
+    </p>
+
+    <h2>Future Plans</h2>
+    <p>
+      This is just the beginning. We’re working on exciting new features like:
+    </p>
+    <ul>
+      <li>Multiplayer games where you can compete live with friends</li>
+      <li>Real cash tournaments and prize-based competitions</li>
+      <li>New game genres including sports, strategy, and multiplayer challenges</li>
+      <li>Mobile app versions for an even smoother experience</li>
+      <li>Gamification features like XP, badges, missions, and daily rewards</li>
+    </ul>
+
+    <h2>Join Us</h2>
+    <p>
+      Whether you're here to chill, compete, or earn, YonoGamez welcomes you with open arms. Sign up in seconds, start playing immediately, and see how far you can climb. We believe everyone has a gamer inside—it's time to let yours out.
+    </p>
+
+    <p>
+      <strong>Let the games begin. Welcome to YonoGamez. 🎮</strong>
+    </p>
+
+    <p style="text-align: center; margin-top: 30px;">
+      <em>Follow us on social media, invite your friends, and be part of India’s fastest-growing gaming family.</em>
+    </p>
+  
+
     <p>At YONO GAMES, we are passionate about creating high-quality mobile gaming experiences that not only entertain but also reward our players. Our mission is to revolutionize the mobile gaming space by combining thrilling gameplay with opportunities for users to earn real rewards. Whether you're playing a quick round of cards, engaging in a fun arcade game, or spinning the wheel for a big win, we aim to provide a seamless, enjoyable, and rewarding experience.</p>
     <br>
     <p>We focus on developing a diverse portfolio of games that cater to different tastes, including popular options like <strong>YONO RUMMY</strong>, <strong>Spin Crush</strong>, and <strong>Jaiho Spin</strong>. Our games are designed to be easy to play, but challenging enough to keep players coming back for more. We believe in offering a balanced mix of entertainment and rewards, so our users can not only have fun but also earn bonuses and prizes as they play.</p>
@@ -444,6 +527,7 @@
     <h2 style="color: #ffe600; margin-top:20px;">सावधानी से खेलें</h2>
     <br>
     <p>गेम खेलते समय हमेशा सतर्क रहें। पैसे का निवेश सोच-समझकर करें। योनो गेम्स किसी भी प्रकार के नुकसान के लिए जिम्मेदार नहीं है। खेल को मनोरंजन के रूप में लें और अपनी वित्तीय सीमाओं का ध्यान रखें।</p>
+ 
   </div>
    
   
