Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -102,7 +102,7 @@
 </head>
 <body>
     <header>
-        <img src="icon.png" alt="Teen Patti Master Icon">
+        <img src="teen_patti_master.jpg" alt="Teen Patti Master Icon">
         <div>
             <h1>Teen Patti Master</h1>
             <div class="verified">Verified App</div>
@@ -114,9 +114,9 @@
         <a href="https://your-teen-patti-app-download.com" class="download-btn" onclick="fbq('track', 'Lead');">⬇ Download Now</a>
 
         <div class="gallery">
-            <img src="win1.jpg" alt="Winning Image 1">
-            <img src="win2.jpg" alt="Winning Image 2">
-            <img src="win3.jpg" alt="Winning Image 3">
+            <img src="gallery1.jpg" alt="Winning Image 1">
+            <img src="gallery2.jpg" alt="Winning Image 2">
+            <img src="gallery3.jpg" alt="Winning Image 3">
         </div>
     </div>
     <footer>
