Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -111,7 +111,7 @@
     </header>
     <div class="content">
         <div class="bonus">🎁 Register now and get ₹1175 Bonus Instantly!</div>
-        <a href="https://your-teen-patti-app-download.com" class="download-btn" onclick="fbq('track', 'Lead');">⬇ Download Now</a>
+        <a href="https://www.earntp.com/m/qnb18o" class="download-btn" onclick="fbq('track', 'Lead');">⬇ Download Now</a>
 
         <div class="gallery">
             <img src="gallery1.jpg" alt="Winning Image 1">
