--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -2,125 +2,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Download Teen Patti Master and get ₹1175 bonus instantly. Verified app with millions of downloads. Join now and start winning!">
-    <meta name="keywords" content="Teen Patti Master, download Teen Patti, teen patti app, get ₹1175 bonus, card game">
-    <meta name="author" content="Teen Patti Master">
-    <title>Download Teen Patti Master - Get ₹1175 Bonus Now!</title>
-    <link rel="icon" href="icon.png" type="image/png">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #ffffff;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            padding: 20px;
-            background: #f8f8f8;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        header img {
-            width: 64px;
-            height: 64px;
-            border-radius: 16px;
-        }
-        .content {
-            padding: 20px;
-        }
-        h1 {
-            font-size: 22px;
-            margin: 0;
-        }
-        .verified {
-            color: #1a73e8;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-        }
-        .verified::after {
-            content: "✔️";
-            margin-left: 6px;
-        }
-        .info {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #666;
-        }
-        .bonus {
-            background: #e0ffe0;
-            padding: 10px;
-            border: 1px solid #00c851;
-            border-radius: 6px;
-            margin-top: 20px;
-            font-size: 16px;
-        }
-        .download-btn {
-            margin-top: 20px;
-            display: inline-block;
-            background: #4CAF50;
-            color: white;
-            padding: 14px 24px;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 8px;
-        }
-        .gallery {
-            margin-top: 30px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-            gap: 12px;
-        }
-        .gallery img {
-            width: 100%;
-            border-radius: 12px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        }
-        footer {
-            margin-top: 30px;
-            font-size: 12px;
-            text-align: center;
-            color: #aaa;
-        }
-    </style>
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', 'YOUR_PIXEL_ID'); 
-        fbq('track', 'PageView');
-    </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Download Teen Patti Master and get ₹1175 Welcome Bonus! Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
+  <meta name="keywords" content="Teen Patti Master, Rummy, Poker, Casino, Game Download, Bonus">
+  <meta name="author" content="Teen Patti Master Official">
+  <title>Teen Patti Master - Apps on Play Store</title>
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', 'YOUR_PIXEL_ID'); // Replace with your pixel ID
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1"
+  /></noscript>
 </head>
 <body>
-    <header>
-        <img src="teen_patti_master.jpg" alt="Teen Patti Master Icon">
-        <div>
-            <h1>Teen Patti Master</h1>
-            <div class="verified">Verified App</div>
-            <div class="info">10M+ Downloads • Rated for 18+</div>
-        </div>
-    </header>
-    <div class="content">
-        <div class="bonus">🎁 Register now and get ₹1175 Bonus Instantly!</div>
-        <a href="https://www.earntp.com/m/qnb18o" class="download-btn" onclick="fbq('track', 'Lead');">⬇ Download Now</a>
-
-        <div class="gallery">
-            <img src="gallery1.jpg" alt="Winning Image 1">
-            <img src="gallery2.jpg" alt="Winning Image 2">
-            <img src="gallery3.jpg" alt="Winning Image 3">
-        </div>
+  <div class="container">
+    <div class="header">
+      <img src="playstore_logo.png" alt="Play Store" class="playstore-logo" />
+      <h1>Teen Patti Master <img src="verified_icon.png" alt="Verified" class="verified-icon" /></h1>
     </div>
-    <footer>
-        &copy; 2025 Teen Patti Master. All rights reserved.
-    </footer>
+
+    <div class="app-info">
+      <img src="icon.png" alt="App Icon" class="app-icon" />
+      <div class="app-meta">
+        <h2>Teen Patti Master</h2>
+        <p class="developer">Teen Patti Master Official</p>
+        <div class="badges">
+          <span>4.9★</span>
+          <span>35M+ Downloads</span>
+          <span>Rated for 18+</span>
+        </div>
+        <a href="#" class="download-btn">⬇️ Rapid Install (₹1175 Bonus)</a>
+      </div>
+    </div>
+
+    <div class="about-app">
+      <h3>About this app</h3>
+      <p>
+        Enjoy Teen Patti Master, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family. Get ₹1175 bonus on signup!
+      </p>
+      <p><strong>Updated on:</strong> June 04, 2025</p>
+    </div>
+
+    <div class="screenshots">
+      <img src="win1.jpg" alt="Winning 1" />
+      <img src="win2.jpg" alt="Winning 2" />
+      <img src="win3.jpg" alt="Winning 3" />
+    </div>
+  </div>
 </body>
 </html>
