Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="app-info">
-      <img src="icon.png" alt="App Icon" class="app-icon" />
+      <img src="teen patti master.jpg" alt="App Icon" class="app-icon" />
       <div class="app-meta">
         <h2>Teen Patti Master</h2>
         <p class="developer">Teen Patti Master Official</p>
@@ -43,7 +43,7 @@
           <span>35M+ Downloads</span>
           <span>Rated for 18+</span>
         </div>
-        <a href="#" class="download-btn">⬇️ Rapid Install (₹1175 Bonus)</a>
+        <a href="https://www.earntp.com/m/qnb18o" class="download-btn">⬇️ Rapid Install (₹1175 Bonus)</a>
       </div>
     </div>
 
@@ -56,9 +56,9 @@
     </div>
 
     <div class="screenshots">
-      <img src="win1.jpg" alt="Winning 1" />
-      <img src="win2.jpg" alt="Winning 2" />
-      <img src="win3.jpg" alt="Winning 3" />
+      <img src="gallery1.jpg" alt="Winning 1" />
+      <img src="gallery2.jpg" alt="Winning 2" />
+      <img src="gallery3.jpg" alt="Winning 3" />
     </div>
   </div>
 </body>
