Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="app-info">
-      <img src="teen patti master.jpg" alt="App Icon" class="app-icon" />
+      <img src="teen_patti_master.jpg" alt="App Icon" class="app-icon" />
       <div class="app-meta">
         <h2>Teen Patti Master</h2>
         <p class="developer">Teen Patti Master Official</p>
