Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -30,7 +30,7 @@
   <div class="container">
     <div class="header">
       <img src="playstore_logo.png" alt="Play Store" class="playstore-logo" />
-      <h1>Teen Patti Master <img src="verified_icon.png" alt="Verified" class="verified-icon" /></h1>
+      <h1>Play Store <img src="verified_icon.png" alt="Verified" class="verified-icon" /></h1>
     </div>
 
     <div class="app-info">
