Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -29,12 +29,12 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="playstore_logo.png" alt="Play Store" class="playstore-logo" />
+      <img src="playstore_logo.png" alt="Play Store"/>
       <h1>Play Store <img src="verified_icon.png" alt="Verified" class="verified-icon" /></h1>
     </div>
 
     <div class="app-info">
-      <img src="teen_patti_master.jpg" alt="App Icon" class="app-icon" />
+      <img src="teen_patti_master.jpg" alt="App Icon" class="app-icon" class="playstore-logo"/>
       <div class="app-meta">
         <h2>Teen Patti Master</h2>
         <p class="developer">Teen Patti Master Official</p>
