Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -43,7 +43,9 @@
           <span>35M+ Downloads</span>
           <span>Rated for 18+</span>
         </div>
-        <a href="https://www.earntp.com/m/qnb18o" class="download-btn">Install Now (₹1175 Bonus)</a>
+        <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
+  <span>Install Now (₹1175 Bonus)</span>
+</a>
       </div>
     </div>
 
