Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -40,7 +40,7 @@
         <p class="developer">Teen Patti Master Official</p>
         <div class="badges">
           <span>4.9★</span>
-          <span>35M+ Downloads</span><br>
+          <span>35M+ Downloads</span><br><br>
           <span>Rated for 18+</span>
         </div>
         <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
