Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -41,7 +41,7 @@
         <div class="badges">
           <span>4.9★</span>
           <span>35M+ Downloads</span><br><br>
-          <span>Rated for 18+</span>
+          <span>Rated for 18+</span><br><br>
         </div>
         <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
   <span>Install Now (₹1175 Bonus)</span>
