--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -43,7 +43,7 @@
           <span>35M+ Downloads</span><br><br>
           <span>Rated for 18+</span><br><br>
         </div>
-        <a href="https://www.earntp.com/m/qnb18o" class="full-width-button">
+        <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
   <span>Download Now (₹1175 Bonus)</span>
 </a>
       </div>
