Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -48,6 +48,13 @@
 </a>
       </div>
     </div>
+    
+    <!-- ✅ BUTTON HERE (immediately after app-info) -->
+<div class="full-width-btn">
+  <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
+    <span>Download Now (₹500 Bonus)</span>
+  </a>
+</div>
 
     <div class="about-app">
       <h3>About this app</h3>
