Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -67,5 +67,27 @@
       <img src="gallery3.jpg" alt="Winning 3" />
     </div>
   </div>
+  <div class="user-reviews">
+  <h3>User Reviews</h3>
+
+  <div class="review">
+    <p class="username">💬 Ramesh Patel</p>
+    <p class="comment">Bahot mast game hai! ₹500 bonus sach me mila 🔥🔥</p>
+    <p class="rating">⭐⭐⭐⭐⭐</p>
+  </div>
+
+  <div class="review">
+    <p class="username">💬 Priya Mehta</p>
+    <p class="comment">Daily earning ho rahi hai, withdraw bhi easy hai 😍</p>
+    <p class="rating">⭐⭐⭐⭐⭐</p>
+  </div>
+
+  <div class="review">
+    <p class="username">💬 Akash Chauhan</p>
+    <p class="comment">Andar Bahar aur Rummy dono favourite hai! Bonus bhi mila 💸</p>
+    <p class="rating">⭐⭐⭐⭐</p>
+  </div>
+  </div>
+  
 </body>
 </html>
