--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -29,7 +29,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="playstore_logo.png" alt="Play Store" class="playstore-logo"/>
+      <img src="playstore_logo.png" alt="Google Play" class="playstore-logo"/>
       <h1>Play Store <img src="verified_icon.png" alt="Verified" class="verified-icon" /></h1>
     </div>
 
