Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -54,7 +54,7 @@
     <p>Rated for 18+</p>
   </div>
 </div>
-    
+ </div>
     <!-- ✅ BUTTON HERE (immediately after app-info) -->
 <div class="full-width-btn">
   <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
