Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -37,7 +37,7 @@
       <img src="teen_patti_master.jpg" alt="App Icon" class="app-icon" >
       <div class="app-meta">
         <h2>Teen Patti Master</h2>
-        <p class="developer">Teen Patti Master Official</p>
+        <span class="developer">Teen Patti Master Official</span>
         
   </div>
     </div>
