--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -36,8 +36,7 @@
     <div class="app-info">
       <img src="teen_patti_master.jpg" alt="App Icon" class="app-icon" >
       <div class="app-meta">
-        <h2>Teen Patti Master</h2>
-        <span class="developer">Teen Patti Master Official</span>
+        <h2>Teen Patti Master <br><span class="developer">Teen Patti Master Official</span></h2>
         
   </div>
     </div>
