--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -9,7 +9,6 @@
   <meta name="author" content="Teen Patti Master Official">
   <title>Teen Patti Master - Apps on Play Store</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- Facebook Pixel Code -->
   
   <!-- Meta Pixel Code -->
 <script>
@@ -21,14 +20,14 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1219924576469562);
+fbq('init', '1219924576469562');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1076320711009948&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1219924576469562&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-</head>
+  
 <body>
   <div class="container">
     <div class="header">
