--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Download Teen Patti Master and get ₹1175 Welcome Bonus! Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
-  <meta name="keywords" content="Teen Patti Master, Rummy, Poker, Casino, Game Download, Bonus">
+  <meta name="description" content="Download Teen Patti Master and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
+  <meta name="keywords" content="Teen Patti Master, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
   <meta name="author" content="Teen Patti Master Official">
   <title>Teen Patti Master - Apps on Play Store</title>
   <link rel="stylesheet" href="styles.css" />
